--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "fs": "0.0.1-security",
+    "materialize-css": "^1.0.0-rc.2",
     "mysql2": "^1.6.5",
     "path": "^0.12.7",
     "sequelize": "^4.42.1"
